<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    tools:context="com.se319s18a9.util3d.Fragments.LoginFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/s_fragment_createAccount_editText_hint_email"
            android:id="@+id/fragment_createAccount_editText_email"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/s_fragment_createAccount_editText_hint_username"
            android:id="@+id/fragment_createAccount_editText_username"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/s_fragment_createAccount_editText_hint_password"
            android:id="@+id/fragment_createAccount_editText_password"
            android:inputType="textPassword"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/s_fragment_createAccount_editText_hint_repeatPassword"
            android:id="@+id/fragment_createAccount_editText_repeatPassword"
            android:inputType="textPassword"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:weightSum="2">

        <Button
            android:background="@color/colorAccent"
            android:id="@+id/fragment_createAccount_button_create"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/s_fragment_createAccount_button_create"
            tools:ignore="ButtonStyle" />

        <Button
            android:background="@color/colorAccent"
            android:id="@+id/fragment_createAccount_button_cancel"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/s_fragment_createAccount_button_cancel"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>