<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login_linearLayout_root"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="com.se319s18a9.util3d.Fragments.LoginFragment">

    <TextView
...
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:text="@string/s_fragment_login_button_text_forgotPassword" />

    <Button
        android:background="@color/colorAccent"
        android:id="@+id/fragment_login_button_createAccount"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:text="@string/s_fragment_login_button_text_createAccount" />
...
